WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148862
HTMLOptionElement.text should never return the value of label
https://bugs.webkit.org/show_bug.cgi?id=148862
Summary
HTMLOptionElement.text should never return the value of label
Ryosuke Niwa
Reported
2015-09-04 18:10:51 PDT
See
https://html.spec.whatwg.org/multipage/forms.html#dom-option-text
The text IDL attribute, on getting, must return the result of stripping and collapsing whitespace from the concatenation of data of all the Text node descendants of the option element, in tree order, excluding any that are descendants of descendants of the option element that are themselves script elements in the HTML namespace or script elements in the SVG namespace. This bug was found by the newly added test: LayoutTests/http/tests/w3c/html/semantics/forms/the-option-element/option-text-label.html
Attachments
Patch
(29.19 KB, patch)
2015-10-30 16:00 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-mavericks
(845.25 KB, application/zip)
2015-10-30 16:30 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-mavericks-wk2
(875.85 KB, application/zip)
2015-10-30 16:35 PDT
,
Build Bot
no flags
Details
Patch
(34.57 KB, patch)
2015-10-30 17:02 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Converted some render tests to reference tests.
(428.22 KB, patch)
2015-11-03 11:02 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-04 18:11:27 PDT
<
rdar://problem/22589226
>
Keith Rollin
Comment 2
2015-10-30 16:00:40 PDT
Created
attachment 264433
[details]
Patch
Build Bot
Comment 3
2015-10-30 16:30:18 PDT
Comment on
attachment 264433
[details]
Patch
Attachment 264433
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/360328
New failing tests: fast/forms/HTMLOptionElement_label02.html fast/forms/HTMLOptionElement_label01.html fast/forms/HTMLOptionElement_label04.html fast/forms/HTMLOptionElement_label05.html
Build Bot
Comment 4
2015-10-30 16:30:21 PDT
Created
attachment 264437
[details]
Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 5
2015-10-30 16:35:42 PDT
Comment on
attachment 264433
[details]
Patch
Attachment 264433
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/360346
New failing tests: fast/forms/HTMLOptionElement_label02.html fast/forms/HTMLOptionElement_label01.html fast/forms/HTMLOptionElement_label04.html fast/forms/HTMLOptionElement_label05.html
Build Bot
Comment 6
2015-10-30 16:35:45 PDT
Created
attachment 264439
[details]
Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Keith Rollin
Comment 7
2015-10-30 17:02:14 PDT
Created
attachment 264444
[details]
Patch
Darin Adler
Comment 8
2015-10-31 14:59:57 PDT
Comment on
attachment 264444
[details]
Patch Any time you have to update render tree expected results like in this patch, you should explore whether we can change the tests into reference tests instead, since those can have platform independent results. Render tree expected results almost always end up different per platform. Otherwise, someone else has to update the expected results files for all the non-Mac platforms after we land the patch. Over time we are converting a lot more tests into reference tests.
Keith Rollin
Comment 9
2015-11-03 11:02:52 PST
Created
attachment 264698
[details]
Converted some render tests to reference tests.
WebKit Commit Bot
Comment 10
2015-11-03 12:00:52 PST
Comment on
attachment 264698
[details]
Converted some render tests to reference tests. Clearing flags on attachment: 264698 Committed
r191964
: <
http://trac.webkit.org/changeset/191964
>
WebKit Commit Bot
Comment 11
2015-11-03 12:00:57 PST
All reviewed patches have been landed. Closing bug.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 12
2022-09-19 02:22:13 PDT
***
Bug 138256
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug